# 23-10Hunters

./: README.md  ballboxbox.blend  cargo.toml  whitediamond_workplace.blend
00valentino/: Cargo.toml  ambient.toml
00valentino/src/: client.rs
blender/: whitediamond_workplace.blend  whitediamond_workplace.blend1
demos/cplatformer/: Cargo.toml  ambient.toml  readme.md
demos/flagtester/: Cargo.toml  ambient.toml
demos/platformer/: Cargo.toml  ambient.toml
final_storm_editor/: icon.svg.import  project.godot
final_storm_editor/00_plane_roamer/: 00_plane_roamer.tscn  Roamer.gd  pivot.gd  roamer_1st_person.tscn  roamer_3rd_person.tscn
final_storm_editor/13_MagnusRock/: cliffmesh_combined.glb.import  cliffmesh_combined_applied.glb.import  cliffmesh_combined_applied_atlas01.png.import  cliffmesh_combined_atlas01.png.import  cliffmesh_rock.glb.import  cliffmesh_rock_applied.glb.import  cliffmesh_rock_applied_atlas01.png.import  cliffmesh_rock_atlas01.png.import  cliffmesh_sep.glb.import  cliffmesh_sep_applied.glb.import  cliffmesh_sep_applied_atlas01.png.import  cliffmesh_sep_atlas01.png.import  magnus-rock-scene-1.tscn  magnus-rock-scene-2.tscn  rocks01_a.glb.import  rocks01_a_atlas01.png.import  rocks01_a_dry.glb.import  rocks01_a_dry_atlas01.png.import  rocks01_b.glb.import  rocks01_b_atlas01.png.import
final_storm_editor/14_StormScenes/: final_storm_scene.tscn  storm_env.tres
final_storm_editor/models_magnus/: mt-axe.fbx.import  mt-backpack.fbx.import  mt-cannedfood01.fbx.import  mt-cannedfood02.fbx.import  mt-carrymat.fbx.import  mt-cliffmesh-dry.glb.import  (+12 more)
(+82 files in other folders)
